<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stackDetailsFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stackDetails.StackDetailsFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- NAME AND DESCRIPTION -->
    <TextView
        android:id="@+id/stackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:gravity="center"
        android:layout_weight="1"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stackDescriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stack_description"
            android:selectAllOnFocus="true"
            android:textColorHint="#616161"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

    <!-- QUESTION VERBIAGE -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_question_verbiage"
        android:gravity="center"
        android:layout_weight="1"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stackQuestionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stack_question_default"
            android:selectAllOnFocus="true"
            android:textColorHint="#616161"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_question_prepost"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questionPretextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputQuestionPretext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/stack_question_pre_hint"
                android:selectAllOnFocus="true"
                android:textColorHint="#616161"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questionPosttextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputQuestionPosttext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:selectAllOnFocus="true"
                android:hint="@string/stack_question_post_hint"
                android:textColorHint="#616161"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

    <!-- ANSWER AND JEOPARDY VERBIAGE -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_jeopardy_verbiage"
        android:gravity="center"
        android:layout_weight="1"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stackAnswerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stack_answer_default"
            android:selectAllOnFocus="true"
            android:textColorHint="#616161"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_jeopardy_prepost"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jeopardyPretextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputJeopardyPretext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/stack_jeopardy_pre_hint"
                android:textColorHint="#616161"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jeopardyPosttextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputJeopardyPosttext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/stack_jeopardy_post_hint"
                android:textColorHint="#616161"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />
    <!-- RESULTS -->
    <Button
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/illustrationsButton"/>
    <TextView
        android:id="@+id/stackQuestionResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:gravity="center"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/stackJeopardyResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:gravity="center"
        android:layout_weight="1"/>
</LinearLayout>