<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/quizmeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizMeFragment"
    android:stateListAnimator="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="400dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/stack_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/error"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/quiz_question"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/quizme_default"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputResponse"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/quizme_hint"
                android:textColorHint="#616161"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_submit_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitButton"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/teal_200"
        android:src="@android:drawable/ic_input_add"
        app:rippleColor="@color/black" />

</RelativeLayout>