<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newStackDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.NewStackDialogFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="@string/error"
        android:layout_weight="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/QuestionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputQuestion"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColorHint="#616161"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AnswerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputAnswer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColorHint="#616161"
            android:inputType="text"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/placement_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placement_prompt"
        android:layout_weight="3" />

    <FrameLayout
        android:id="@+id/placement_inputs"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PlacementNumberInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberInputPlacement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:inputType="numberSigned"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBoxEndPlacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placement_radio_button" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>